assets/scss/application.scss
/* ... */
.mappa-widget {
  border: 2px solid $mappa-colour;
  padding: govuk-spacing(4);
  margin-bottom: govuk-spacing(4);
  & h3,
  & h4 {
    color: $mappa-colour;
    margin-bottom: govuk-spacing(1);
    font-weight: 400;
  }
}

.mpop-govuk-link-button {
  background: none;
  border: none;
  padding: 0;
  margin: 0;
  font: inherit;
  cursor: pointer;
  color: #1d70b8;
  text-decoration: underline;
}

.mpop-govuk-link-button:hover {
  color: #003078;
  text-decoration: underline;
}

.technical-updates-banner {
  background-color: #f9e1ec;
  padding: 10px 0 10px 0;
}

.feedback-prompt {
  background-color: #f3f2f1;
  color: #0b0c0c;
  border-top: 1px solid #b1b4b6;
  outline: 0;
  margin-top: 60px;
}

.feedback-prompt-text {
  font-size: 16px;
  line-height: 1.25;
  margin: 0 15px;
  padding: 20px 0;
}

.feedback-container {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.feedback-container .govuk-button {
  margin-bottom: 0;
  border: 1px #0b0c0c solid;
  min-width: 100px;
  box-shadow: 0px 3px 0px 0px #0b0c0c;
}

.feedback-container .govuk-label {
  text-decoration: none !important;
}

.govuk-grid-row {
  margin-right: -15px;
  margin-left: -15px;
}

.technical-updates-container {
  color: #0b0c0c;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.display-none {
  display: none;
}

.sms-message-wrapper {
  background: #e2e1e0;
  border: 1px solid #e2e1e0;
  border-radius: 5px;
  box-sizing: border-box;
  clear: both;
  margin: 0 0 30px;
  max-width: 464px;
  padding: 15px;
  position: relative;
  white-space: normal;
  width: 100%;
  word-wrap: break-word;
}
.sms-message-wrapper:after {
  border-color: transparent transparent #e2e1e0 #e2e1e0;
  border-style: solid;
  border-width: 10px 13px;
  bottom: -5px;
  content: '';
  display: block;
  position: absolute;
  right: -20px;
  transform: rotate(20deg);
}

.contact-activity {
  &__tag {
    display: inline-block !important;
    float: none;
    flex-shrink: 0;
  }

  &__actions {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    gap: 10px;

    li {
      white-space: nowrap;
    }
  }

  &__manage-link {
    display: inline-block;
    width: 100px;
    white-space: normal;
  }

  &__filter {
    .govuk-button {
      @extend .govuk-button--secondary;
    }
  }

  &--noNotes {
    display: block;
  }
}

.contact-log-compact {
  .govuk-details {
    margin-bottom: 5px;
  }

  &__contact-wrapper {
    display: flex;
    align-items: flex-start;
    gap: 5px;
  }

  &__contact-content {
    flex: 1;
    min-width: 0;
  }

  .contact-activity__tag {
    flex-shrink: 0;
    margin-left: auto;
  }

  &-row {
    border: 0;
    &--last {
      border-bottom: 1px solid #b1b4b6;
    }
  }
  .app-compliance-tag--compact {
    float: none;
    display: inline-flex !important;
    align-items: center;
    justify-content: center;
  }
}

.flex__item-full-width-mobile {
  @include govuk-media-query($until: tablet) {
    width: 100%;
  }
}

.flex--col-mobile {
  @include govuk-media-query($until: tablet) {
    flex-direction: column;
  }
}

.flex--gap-3 {
  gap: govuk-spacing(3);
}

[data-predictor-badge] {
  margin: 0 10px 10px 0;
  &:last-child {
    margin: 0;
  }
}

